--- a/src/index.scss
+++ b/src/index.scss
@@ -1,68 +1,37 @@
+@import './../public/normalize.css';
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Manrope', Arial, Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+[data-theme="light"] {
+  --background-color: #0079BF;
+  --header-footer: #0067A3;
+  --text: #FFFFFF;
+  --list-background: #EBECF0;
+  --list-text: #000000;
+  --list-addcard-text: #5E6C84;
+  --switcher-background: #DCE0E6;
+  --switcher-slider: #88bff6;
+  --switcher-active: #0079BF; 
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+[data-theme="dark"] {
+  --background-color: #1E1E1E;
+  --header-footer: #333333;
+  --text: #E0E0E0;
+  --list-background: #2C2C2C;
+  --list-text: #FFFFFF;
+  --list-addcard-text: #B0B0B0;
+  --switcher-background: #333333;
+  --switcher-slider: #151522;
+  --switcher-active: #0067A3;
 }
