added User component, fixed ThemeSwitcher (TODO: Drop Down menu)

--- a/src/index.scss
+++ b/src/index.scss
@@ -49,5 +49,5 @@ html, body {
   --list-addcard-text: #B0B0B0;
   --switcher-background: #333333;
   --switcher-slider: #151522;
-  --switcher-active: #0067A3;
+  --switcher-active: #1c313e;
 }
