--- a/src/components/ui/ThemeSwitcher/styles.module.scss
+++ b/src/components/ui/ThemeSwitcher/styles.module.scss
@@ -1,53 +1,76 @@
 .switcher {
-  display: inline-block;
   position: relative;
   width: 3.75rem;
   height: 1.88rem;
-}
+  display: flex;
+  align-items: center;
 
-.switcher__input {
-  display: none;
-}
+  &__input {
+    display: none;
+  }
 
-.switcher__slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  border-radius: 3.13rem;
-  background-color: var(--switcher-background);
-  transition: 0.5s;
-
-  &::before {
-    content: '';
+  &__slider {
     position: absolute;
     cursor: pointer;
-    left: 0.13rem;
-    bottom: 0.13rem;
-    height: 1.63rem;
-    width: 1.63rem;
-    border-radius: 50%;
-    background-color: var(--switcher-slider);
-    transition: 0.4s;
-    background-image: url('../../../assets/images/icons/sun.svg');
-    background-size: 1.25rem 1.25rem;
-    background-repeat: no-repeat;
-    background-position: center;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 3.13rem;
+    background-color: var(--switcher-background);
+    transition: 0.5s;
+    outline: 1.5px solid rgba(255, 255, 255, 0.629);
+
+    &::before {
+      content: '';
+      position: absolute;
+      cursor: pointer;
+      left: 0.10rem;
+      bottom: 0.13rem;
+      height: 1.63rem;
+      width: 1.63rem;
+      border-radius: 50%;
+      background-color: var(--switcher-slider);
+      transition: 0.4s;
+      background-image: url('../../../assets/images/icons/sun.svg');
+      background-size: 1.25rem 1.25rem;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
   }
-}
 
-.switcher__input:checked + .switcher__slider {
-  background-color: var(--switcher-active);
+  .switcher__input:checked + .switcher__slider {
+    background-color: var(--switcher-active);
 
-  &::before {
-    transform: translateX(1.88rem);
-    -webkit-transform: translateX(1.88rem);
-    -ms-transform: translateX(1.88rem);
-    background-image: url('../../../assets/images/icons/moon.svg');
-    background-size: 1.25rem 1.25rem;
-    background-repeat: no-repeat;
-    background-position: center;
+    &::before {
+      transform: translateX(1.88rem);
+      -webkit-transform: translateX(1.88rem);
+      -ms-transform: translateX(1.88rem);
+      background-image: url('../../../assets/images/icons/moon.svg');
+      background-size: 1.25rem 1.25rem;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 15%;
+      width: 0.1rem;
+      height: 0.1rem;
+      background-color: #fff;
+      border-radius: 50%;
+      box-shadow: 0.5rem 0.25rem #fff, 1rem -0.5rem #fff, 1.1rem 0.5rem #fff;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      animation: showStars 0.5s ease 0.5s forwards;
+    }
+  }
+
+  @keyframes showStars {
+    to {
+      opacity: 1;
+    }
   }
 }
