--- a/src/components/ui/User/styles.module.scss
+++ b/src/components/ui/User/styles.module.scss
@@ -2,6 +2,7 @@
     &__container {
         display: flex;
         align-items: center;
+        gap: 20px;
     }
     &__img {
         width: 50px;
