--- a/src/components/ui/Dropdown/styles.module.scss
+++ b/src/components/ui/Dropdown/styles.module.scss
@@ -23,6 +23,7 @@
         opacity: 0;
         overflow: hidden;
         transition: max-height 0.4s ease, opacity 0.4s ease;
+        z-index: 1;
     }
 
     &__menu_active {
