working on Backlog

--- a/src/index.scss
+++ b/src/index.scss
@@ -37,7 +37,7 @@ html, body {
   --switcher-background: #DCE0E6;
   --switcher-slider: #88bff6;
   --switcher-active: #0079BF;
-  --button-hover-bg: #d0e4f6; // Легкий светлый фон
+  --button-hover-bg: #d0e4f6;
 }
 
 [data-theme="dark"] {
