--- a/src/components/ui/ColumnDropdown/styles.module.scss
+++ b/src/components/ui/ColumnDropdown/styles.module.scss
@@ -4,7 +4,7 @@
 
     &__toggle {
         display: flex;
-        align-items: center;
+        justify-content: space-between;
         cursor: pointer;
     }
 
@@ -53,9 +53,8 @@
             width: 3px;
             height: 10px;
             background-color: transparent;
-            border-bottom: 12px solid #fff;
+            border-bottom: 12px solid #6a84b8;
             top: 0;
-            left: 0;
             transition: 0.4s ease;
         }
         &:before {
