--- a/src/components/ui/Column/styles.module.scss
+++ b/src/components/ui/Column/styles.module.scss
@@ -7,6 +7,7 @@
         padding: 12px;
         gap: 15px;
         color: var(--list-text);
+        min-height: 285px;
         height: 100%;
         width: 100%;
         position: relative;
@@ -20,8 +21,9 @@
         padding-right: 3%;
     }
     &__input {
+        width: 100%;
         border: none;
-        padding: 4px;
+        padding: 9px;
         border-radius: 5px;
 
         &:focus {
