--- a/src/components/ui/ColumnDropdown/styles.module.scss
+++ b/src/components/ui/ColumnDropdown/styles.module.scss
@@ -12,7 +12,7 @@
         position: absolute;
         top: 37px;
         right: 0;
-        width: 8rem;
+        width: 100%;
         font-size: 1rem;
         border: 1px solid #f1f1f155;
         background-color: var(--list-task-background);
