--- a/src/components/Columns/styles.module.scss
+++ b/src/components/Columns/styles.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 2% 2% 2% 2%;
+    padding: 15px;
     background-color: var(--background-color);
     gap: 2%;
     @media (max-width: 1000px){
