changes in Column styles

--- a/src/components/ui/Column/styles.module.scss
+++ b/src/components/ui/Column/styles.module.scss
@@ -19,6 +19,14 @@
     }
     &__task {
         padding-right: 3%;
+        &Link{
+            color: var(--list-text);
+            text-decoration: none;
+            transition: color 0.2s ease-in-out;
+            &:hover{
+                color: var(--list-addcard-text);
+            }
+        }
     }
     &__input {
         width: 100%;
