--- a/src/components/TaskDetail/styles.module.scss
+++ b/src/components/TaskDetail/styles.module.scss
@@ -9,6 +9,8 @@
         background-color: transparent;
         border: none;
         cursor: pointer;
+        align-self: flex-end;
+        margin-right: 20px;
     }
     &__textarea{
         resize: none;
